--- a/View/NotesWindow.xaml
+++ b/View/NotesWindow.xaml
@@ -3,13 +3,19 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:NoteApplication.View"
         xmlns:vm="clr-namespace:NoteApplication.ViewModel"
+        xmlns:help="clr-namespace:NoteApplication.ViewModel.Helpers"
+        xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
+        xmlns:uc="clr-namespace:NoteApplication.View.UserControls"
         mc:Ignorable="d"
-        Title="NotesWindow" Height="400" Width="600">
+        Title="NotesWindow" Height="400" Width="800">
 
     <Window.Resources>
         <vm:NotesViewModel x:Key="vm"/>
+        <vm:TextEditorViewModel x:Key="tvm"/>
+        <help:DataBaseHelper x:Key="help"/>
     </Window.Resources>
     
     <DockPanel DataContext="{StaticResource vm}">
@@ -21,7 +27,8 @@
                           Command="{Binding NewNoteCommand}"
                           CommandParameter="{Binding SelectedNotebook}"/>
                 <Separator/>
-                <MenuItem Header="Exit"/>
+                <MenuItem Header="Exit"
+                          Command="{Binding ExitCommand}"/>
             </MenuItem>
         </Menu>
         <StatusBar DockPanel.Dock="Bottom">
@@ -32,22 +39,64 @@
         </StatusBar>
 
         <ListView DockPanel.Dock="Left"
-                  Width="140"
+                  Background="MidnightBlue"
+                  Width="200"
                   SelectedValue="{Binding SelectedNotebook,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                   ItemsSource="{Binding Notebooks}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Name}"/>
+                    <Grid>
+                        <uc:DisplayNotebook NotebookDep="{Binding}">
+                            <uc:DisplayNotebook.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem Header="Rename notebook"
+                                              Command="{Binding Source={StaticResource vm},Path=RenameEditCommandNotebook}"
+                                              CommandParameter="{Binding}"/>
+                                </ContextMenu>
+                            </uc:DisplayNotebook.ContextMenu>
+                        </uc:DisplayNotebook>
+                        <TextBox    x:Name="RenameNotebookTextBox" 
+                                    Text="{Binding Name,Mode=TwoWay}"
+                                    Visibility="{Binding Source={StaticResource vm}, Path=NotebookRenameVisibility}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="LostFocus">
+                                    <i:InvokeCommandAction Command="{Binding Source={StaticResource vm}, Path=RenameEndEditCommandNotebook}"
+                                                           CommandParameter="{Binding}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </TextBox>
+                    </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
             
         </ListView>
         <ListView DockPanel.Dock="Left"
-                  Width="140"
+                  Width="200"
+                  SelectedValue="{Binding SelectedNote,Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                   ItemsSource="{Binding Notes}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextBlock Text="{Binding Title}"/>
+                        <Grid>
+                        <uc:DisplayNote NoteDep="{Binding}">
+                            <uc:DisplayNote.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem Header="Rename note"
+                                              Command="{Binding Source={StaticResource vm}, Path=RenameEditCommandNote}"
+                                              CommandParameter="{Binding}"/>
+                                </ContextMenu>
+                            </uc:DisplayNote.ContextMenu>
+                        </uc:DisplayNote>
+                        <TextBox x:Name="RenameNoteTextBox"
+                                 Text="{Binding Title, Mode=TwoWay}"
+                                 Visibility="{Binding Source={StaticResource vm}, Path=NoteRenameVisibility}">
+                            <i:Interaction.Triggers>
+                                <i:EventTrigger EventName="LostFocus">
+                                    <i:InvokeCommandAction Command="{Binding Source={StaticResource vm}, Path=RenameEndEditCommandNote}"
+                                                           CommandParameter="{Binding}"/>
+                                </i:EventTrigger>
+                            </i:Interaction.Triggers>
+                        </TextBox>
+                    </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
@@ -61,6 +110,16 @@
                     <TextBlock Text="B"
                                FontWeight="Bold"/>
                 </ToggleButton>
+                <ToggleButton x:Name="ItalicButton"
+                              Click="ItalicButton_Click">
+                    <TextBlock Text="I"
+                               FontStyle="Italic"/>
+                </ToggleButton>
+                <ToggleButton x:Name="UnderlineButton"
+                              Click="UnderlineButton_Click"
+                              Command="">
+                    <TextBlock Text="U"/>
+                </ToggleButton>
                 <ComboBox x:Name="fontFamilyComboBox"
                           Width="100"
                           SelectionChanged="fontFamilyComboBox_SelectionChanged">
@@ -72,12 +131,19 @@
                           TextBoxBase.TextChanged="fontSizeComboBox_TextChanged">
                     
                 </ComboBox>
+                <Button x:Name="SaveButton"
+                        Content="Save"
+                        Click="SaveButton_Click"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
-            <RichTextBox x:Name="contentRichTextBox"
+            <toolkit:RichTextBox x:Name="contentRichTextBox"
                          TextChanged="contentRichTextBox_TextChanged"
-                         SelectionChanged="contentRichTextBox_SelectionChanged"/>
+                         SelectionChanged="contentRichTextBox_SelectionChanged">
+                <toolkit:RichTextBox.TextFormatter>
+                    <toolkit:RtfFormatter />
+                </toolkit:RichTextBox.TextFormatter>
+            </toolkit:RichTextBox>
 
         </Grid>
 
