--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -3,10 +3,61 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:NoteApplication.View"
+        xmlns:vm="clr-namespace:NoteApplication.ViewModel"
         mc:Ignorable="d"
-        Title="LoginWindows" Height="450" Width="800">
-    <Grid>
-        
+        Title="LoginWindows" Height="300" Width="300">
+    <Window.Resources>
+        <ResourceDictionary>
+            <vm:LoginViewModel x:Key="vm"/>
+        </ResourceDictionary>
+    </Window.Resources>
+    <Grid DataContext="{StaticResource vm}">
+        <StackPanel Visibility="{Binding LoginVisibility}"
+                    Margin="10">
+            <TextBlock Text="Email: "/>
+            <TextBox Text="{Binding Username, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Password: "/>
+            <TextBox Text="{Binding Password, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Command="{Binding LoginCommand}"
+                    CommandParameter="{Binding User}"
+                    Content="Login"
+                    Margin="10,5"/>
+            <TextBlock Style="{StaticResource registerStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                        <i:InvokeCommandAction Command="{Binding ShowRegisterCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+                
+            </TextBlock>
+        </StackPanel>
+
+        <StackPanel Visibility="{Binding RegisterVisibility}"
+                    Margin="10,0">
+            <TextBlock Text="First Name: "/>
+            <TextBox Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Last Name: "/>
+            <TextBox Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Email: "/>
+            <TextBox Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Password: "/>
+            <TextBox Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Confirm password: "/>
+            <TextBox Text="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            <Button Command="{Binding RegisterCommand}"
+                    CommandParameter="{Binding User}"
+                    Content="Register"
+                    Margin="10,5"/>
+            <TextBlock Style="{StaticResource loginStyle}">
+                <i:Interaction.Triggers>
+                    <i:EventTrigger EventName="MouseLeftButtonDown">
+                        <i:InvokeCommandAction Command="{Binding ShowRegisterCommand}"/>
+                    </i:EventTrigger>
+                </i:Interaction.Triggers>
+
+            </TextBlock>
+        </StackPanel>
     </Grid>
 </Window>
