added microsoft storage conainer with blob. Every note is now saved locally  and in the container so that it can be accessed from anywhere with the firebase account

--- a/View/NotesWindow.xaml
+++ b/View/NotesWindow.xaml
@@ -135,7 +135,7 @@
                 </ComboBox>
                 <Button x:Name="SaveButton"
                         Content="Save"
-                        Click="SaveButton_Click"/>
+                        Click="SaveButton_ClickAsync"/>
             </ToolBar>
         </ToolBarTray>
         <Grid>
