fixed small issue with a textBlock that i cannot find

--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -70,6 +70,8 @@
                     </TransformGroup>
                 </Button.RenderTransform>
             </Button>
+            <TextBlock x:Name="textBlock" Visibility="Collapsed">
+            </TextBlock>
             <Button x:Name="GotoRegister"
                     Command="{Binding ShowRegisterCommand}"
                     Content="Register"
