--- a/View/LoginWindow.xaml
+++ b/View/LoginWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:local="clr-namespace:NoteApplication.View"
         xmlns:vm="clr-namespace:NoteApplication.ViewModel"
         mc:Ignorable="d"
-        Title="LoginWindows" Height="320" Width="320">
+        Title="Login" Height="320" Width="320"
+        Icon="icons8_book_96_EDe_icon.ico">
     <Window.Resources>
         <ResourceDictionary>
             <vm:LoginViewModel x:Key="vm"/>
@@ -51,16 +52,41 @@
 
     </Window.Triggers>
     <Grid DataContext="{StaticResource vm}">
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="VisualStateGroup">
+                <VisualStateGroup.Transitions>
+                    <VisualTransition GeneratedDuration="00:00:00">
+                        <Storyboard>
+                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="GotoRegister" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)">
+                                <EasingColorKeyFrame KeyTime="00:00:00" Value="White">
+                                    <EasingColorKeyFrame.EasingFunction>
+                                        <BackEase EasingMode="EaseInOut"/>
+                                    </EasingColorKeyFrame.EasingFunction>
+                                </EasingColorKeyFrame>
+                                <EasingColorKeyFrame KeyTime="00:00:01" Value="#FF88B4E4"/>
+                            </ColorAnimationUsingKeyFrames>
+                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="button" Storyboard.TargetProperty="(Control.Background).(SolidColorBrush.Color)">
+                                <EasingColorKeyFrame KeyTime="00:00:01" Value="#FFC8C8C8"/>
+                            </ColorAnimationUsingKeyFrames>
+                            <ColorAnimationUsingKeyFrames Storyboard.TargetName="GotoRegister" Storyboard.TargetProperty="(Control.BorderBrush).(SolidColorBrush.Color)">
+                                <EasingColorKeyFrame KeyTime="00:00:00" Value="#FF707070"/>
+                                <EasingColorKeyFrame KeyTime="00:00:01" Value="Black"/>
+                            </ColorAnimationUsingKeyFrames>
+                        </Storyboard>
+                    </VisualTransition>
+                </VisualStateGroup.Transitions>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
         <StackPanel Visibility="{Binding LoginVisibility}"
                     Margin="10" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Email: "/>
-            <TextBox Text="{Binding Username, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBlock Text="Email: " RenderTransformOrigin="0.501,0.603" Foreground="Black"/>
+            <TextBox Text="{Binding Username, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,3,0,10"/>
             <TextBlock Text="Password: "/>
-            <TextBox Text="{Binding Password, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+            <TextBox Text="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0,3,0,10"/>
             <Button x:Name="button" Command="{Binding LoginCommand}"
                     CommandParameter="{Binding User}"
                     Content="Login"
-                    Margin="10,5" RenderTransformOrigin="0.5,0.5" Width="255" Height="25">
+                    Margin="10,5" RenderTransformOrigin="0.5,0.5" Width="255" Height="25" Background="#FFB1B1B1">
                 <Button.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
@@ -70,15 +96,12 @@
                     </TransformGroup>
                 </Button.RenderTransform>
             </Button>
-            <TextBlock x:Name="textBlock" Visibility="Collapsed">
-            </TextBlock>
+            <TextBlock x:Name="textBlock" Visibility="Collapsed"/>
             <Button x:Name="GotoRegister"
                     Command="{Binding ShowRegisterCommand}"
                     Content="Register"
                     Width="50" 
-                    HorizontalAlignment="Left">
-
-            </Button>
+                    HorizontalAlignment="Left" Margin="0,5,0,0" Background="#FFDDDDDD" BorderBrush="#FF707070" Foreground="Black"/>
         </StackPanel>
 
         <StackPanel Visibility="{Binding RegisterVisibility}"
