--- a/View/NotesWindow.xaml
+++ b/View/NotesWindow.xaml
@@ -10,7 +10,8 @@
         xmlns:toolkit="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:uc="clr-namespace:NoteApplication.View.UserControls"
         mc:Ignorable="d"
-        Title="NotesWindow" Height="400" Width="800">
+        Title="Notes" Height="400" Width="800"
+        Icon="icons8_book_96_EDe_icon.ico">
 
     <Window.Resources>
         <vm:NotesViewModel x:Key="vm"/>
@@ -52,6 +53,9 @@
                                     <MenuItem Header="Rename notebook"
                                               Command="{Binding RenameEditCommandNotebook, Source={StaticResource vm}}"
                                               CommandParameter="{Binding}"/>
+                                    <MenuItem Header="Delete notebook"
+                                              Command="{Binding DeleteCommandNotebook, Source={StaticResource vm}}"
+                                              CommandParameter="{Binding}"/>
                                 </ContextMenu>
                             </uc:DisplayNotebook.ContextMenu>
                         </uc:DisplayNotebook>
@@ -82,6 +86,9 @@
                                 <ContextMenu>
                                     <MenuItem Header="Rename note"
                                               Command="{Binding RenameEditCommandNote, Source={StaticResource vm}}"
+                                              CommandParameter="{Binding}"/>
+                                    <MenuItem Header="Delete note"
+                                              Command="{Binding DeleteCommandNote, Source={StaticResource vm}}"
                                               CommandParameter="{Binding}"/>
                                 </ContextMenu>
                             </uc:DisplayNote.ContextMenu>
