--- a/View/UserControls/DisplayNote.xaml
+++ b/View/UserControls/DisplayNote.xaml
@@ -2,21 +2,43 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:vm="clr-namespace:NoteApplication.ViewModel"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:NoteApplication.View.UserControls"
+             xmlns:local="clr-namespace:NoteApplication.View.UserControls" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="200">
+    <UserControl.Resources>
+        <vm:NotesViewModel x:Key="vm"/>
+    </UserControl.Resources>
     <StackPanel>
         <TextBlock Text="{Binding Title}"
                    Foreground="Black"
-                   Margin="15"
-                   FontSize="20"
+                   Margin="3"
+                   FontSize="15"
                    FontWeight="bold"
-                   VerticalAlignment="Center"/>
+                   VerticalAlignment="Top"
+                   Visibility="{Binding NoteNameVisibility, Source={StaticResource vm}}"/>
         <TextBlock Text="{Binding LastUpdated}"
                    Foreground="DodgerBlue"
-                   Margin="15"
-                   FontSize="15"
-                   VerticalAlignment="Center"/>
+                   Margin="3"
+                   FontSize="10"
+                   VerticalAlignment="Center"
+                   Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}"/>
+
+        <TextBox x:Name="RenameNoteTextBox"
+                 Text="{Binding Title, Mode=TwoWay}"
+                 Visibility="{Binding NoteRenameVisibility, Source={StaticResource vm}}" 
+                 VerticalAlignment="Top"
+                 FontSize="15" 
+                 Margin="0,3,0,19"
+                 Width="180">
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="LostFocus">
+                    <i:InvokeCommandAction 
+                        Command="{Binding RenameEndEditCommandNote, Source={StaticResource vm}}"
+                        CommandParameter="{Binding}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
+        </TextBox>
     </StackPanel>
 </UserControl>
