--- a/View/UserControls/DisplayNotebook.xaml
+++ b/View/UserControls/DisplayNotebook.xaml
@@ -3,14 +3,17 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:NoteApplication.View.UserControls" xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
-             xmlns:vm="clr-namespace:NoteApplication.ViewModel"
+             xmlns:local="clr-namespace:NoteApplication.View.UserControls" 
+             xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+             xmlns:vm="clr-namespace:NoteApplication.ViewModel" 
+             xmlns:help="clr-namespace:NoteApplication.ViewModel.Helpers"
              mc:Ignorable="d" 
              d:DesignHeight="100" d:DesignWidth="200">
     <UserControl.Resources>
         <vm:NotesViewModel x:Key="vm"/>
+        <help:BindingProxy x:Key="proxy"/>
     </UserControl.Resources>
-    <StackPanel>
+    <StackPanel ContextMenu="{StaticResource proxy}">
         <TextBlock Text="{Binding Name,Mode=TwoWay}"
                    Foreground="White"
                    Margin="15"
@@ -39,5 +42,6 @@
                 </i:EventTrigger>
             </i:Interaction.Triggers>
         </TextBox>
+        
     </StackPanel>
 </UserControl>
