--- a/App.xaml
+++ b/App.xaml
@@ -15,5 +15,50 @@
             <Setter Property="Foreground" Value="DodgerBlue"/>
             <Setter Property="TextDecorations" Value="Underline"/>
         </Style>
+
+        <SolidColorBrush
+            x:Key="numbersColor"
+            Color="#264653"/>
+        <SolidColorBrush
+            x:Key="operationColor"
+            Color="#e76f51"/>
+        <SolidColorBrush
+            x:Key="foregroundColor"
+            Color="white"/>
+        <SolidColorBrush
+            x:Key="extraColor"
+            Color="LightGray"/>
+
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Margin" Value="5"/>
+        </Style>
+        <Style TargetType="Button" x:Key="numberButtonStyle">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Background" Value="{StaticResource numbersColor}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style TargetType="Button" x:Key="operationButtonStyle">
+            <Setter Property="Foreground" Value="White"/>
+            <Setter Property="FontSize" Value="25"/>
+            <Setter Property="Margin" Value="5"/>
+            <Setter Property="Background" Value="{StaticResource operationColor}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+
+        </Style>
+        <Style TargetType="Button" x:Key="extraButtonStyle" BasedOn="{StaticResource numberButtonStyle}">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="Background" Value="{StaticResource extraColor}"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style TargetType="Border" x:Key="borderRound">
+            <Setter Property="CornerRadius" Value="5"/>
+        </Style>
+        <Style TargetType="Label" x:Key="numberDisplay">
+            <Setter Property="Foreground" Value="{StaticResource numbersColor}"/>
+            <Setter Property="FontSize" Value="14"/>
+        </Style>
     </Application.Resources>
 </Application>
