--- a/View/UserControls/DisplayNote.xaml
+++ b/View/UserControls/DisplayNote.xaml
@@ -18,12 +18,50 @@
                    FontWeight="bold"
                    VerticalAlignment="Top"
                    Visibility="{Binding NoteNameVisibility, Source={StaticResource vm}}"/>
-        <TextBlock Text="{Binding LastUpdated}"
-                   Foreground="DodgerBlue"
-                   Margin="3"
-                   FontSize="10"
-                   VerticalAlignment="Center"
-                   Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}"/>
+        <Expander>
+            <StackPanel>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*"/>
+                        <ColumnDefinition Width="2*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock
+                       Text="Last updated:"
+                       Foreground="Black"
+                       Margin="3"
+                       FontSize="10"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}" HorizontalAlignment="Left"/>
+                    <TextBlock Text="{Binding LastUpdated}"
+                       Foreground="DodgerBlue"
+                       Margin="3"
+                       FontSize="10"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}" 
+                       Grid.Column="1"/>
+                    <TextBlock
+                       Text="Created at:"
+                       Foreground="Black"
+                       Margin="3"
+                       FontSize="10"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}" HorizontalAlignment="Left"
+                       Grid.Row="1"/>
+                    <TextBlock Text="{Binding CreatedTime}"
+                       Foreground="DodgerBlue"
+                       Margin="3"
+                       FontSize="10"
+                       VerticalAlignment="Center"
+                       Visibility="{Binding NoteCreatedVisibility, Source={StaticResource vm}}"
+                       Grid.Column="1"
+                       Grid.Row="1"/>
+                </Grid>
+            </StackPanel>
+        </Expander>
 
         <TextBox x:Name="RenameNoteTextBox"
                  Text="{Binding Title, Mode=TwoWay}"
