Added weather window. Going to implement in UI and improve the window

--- a/View/NotesWindow.xaml
+++ b/View/NotesWindow.xaml
@@ -36,6 +36,9 @@
             <Button Content="Open Calculator"
                     Margin="10,0,10,0"
                     Command="{Binding OpenCalculatorWindowCommand}"/>
+            <Button Content="Open Weather"
+                    Margin="10,0,10,0"
+                    Command="{Binding OpenWeatherWindowCommand}"/>
         </Menu>
         
         <StatusBar DockPanel.Dock="Bottom">
